{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 18,
  "lineage": "277d5b3b-c3c2-b4c4-96f3-048236b9c1cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052023ea01961dc7f",
            "association_id": "eipassoc-0593e0e8632e39c74",
            "domain": "vpc",
            "id": "eipalloc-052023ea01961dc7f",
            "instance": "i-0d164bfdca3e149f4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-023007825983e5bc5",
            "private_dns": "ip-10-142-6-15.ec2.internal",
            "private_ip": "10.142.6.15",
            "public_dns": "ec2-34-192-166-240.compute-1.amazonaws.com",
            "public_ip": "34.192.166.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-ip-public"
            },
            "tags_all": {
              "Name": "eip-ip-public"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.node01",
            "aws_key_pair.KP-ssh",
            "aws_network_interface.foo",
            "aws_security_group.SG_default",
            "aws_subnet.SN_pub_a",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:548850886359:instance/i-0d164bfdca3e149f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d164bfdca3e149f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-ssh-eflores",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-023007825983e5bc5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023007825983e5bc5",
            "private_dns": "ip-10-142-6-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.142.6.15",
            "public_ip": "54.227.78.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c58f408de9dccca7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0644c8fdde1d416d5",
            "tags": {
              "Name": "bastion.hacom.com"
            },
            "tags_all": {
              "Name": "bastion.hacom.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06366458a9043e7e1"
            ]
          },
          "dependencies": [
            "aws_key_pair.KP-ssh",
            "aws_network_interface.foo",
            "aws_security_group.SG_default",
            "aws_subnet.SN_pub_a",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:548850886359:instance/i-00b3e5350983af4a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b3e5350983af4a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-ssh-eflores",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-07ad4dc28899999ba"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ad4dc28899999ba",
            "private_dns": "ip-10-142-6-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.142.6.16",
            "public_ip": "44.204.77.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a10bb1f29af3bab0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0644c8fdde1d416d5",
            "tags": {
              "Name": "monitoreo.hacom.com"
            },
            "tags_all": {
              "Name": "monitoreo.hacom.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06366458a9043e7e1"
            ]
          },
          "dependencies": [
            "aws_key_pair.KP-ssh",
            "aws_network_interface.foo2",
            "aws_security_group.SG_default",
            "aws_subnet.SN_pub_a",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:internet-gateway/igw-0b72c662f719e2fe5",
            "id": "igw-0b72c662f719e2fe5",
            "owner_id": "548850886359",
            "tags": {
              "Name": "IGW-test"
            },
            "tags_all": {
              "Name": "IGW-test"
            },
            "vpc_id": "vpc-0dd3e67299fe2ebeb"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:network-interface/eni-023007825983e5bc5",
            "id": "eni-023007825983e5bc5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:ef:7f:18:06:15",
            "owner_id": "548850886359",
            "private_ip": "10.142.6.15",
            "private_ip_list": [
              "10.142.6.15"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.142.6.15"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06366458a9043e7e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0644c8fdde1d416d5",
            "tags": {
              "Name": "private_network_interface"
            },
            "tags_all": {
              "Name": "private_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.SG_default",
            "aws_subnet.SN_pub_a",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:network-interface/eni-07ad4dc28899999ba",
            "id": "eni-07ad4dc28899999ba",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:29:04:9d:45:f1",
            "owner_id": "548850886359",
            "private_ip": "10.142.6.16",
            "private_ip_list": [
              "10.142.6.16"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.142.6.16"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06366458a9043e7e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0644c8fdde1d416d5",
            "tags": {
              "Name": "private_network_interface"
            },
            "tags_all": {
              "Name": "private_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.SG_default",
            "aws_subnet.SN_pub_a",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:route-table/rtb-0dd04e42ac7276314",
            "id": "rtb-0dd04e42ac7276314",
            "owner_id": "548850886359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b72c662f719e2fe5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_SN_pub"
            },
            "tags_all": {
              "Name": "RT_SN_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd3e67299fe2ebeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTASOC_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0160c9c0da60eec9c",
            "route_table_id": "rtb-0dd04e42ac7276314",
            "subnet_id": "subnet-0644c8fdde1d416d5"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_1",
            "aws_route_table.RT_1",
            "aws_subnet.SN_pub_a",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:security-group/sg-06366458a9043e7e1",
            "description": "Permitir trafico SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06366458a9043e7e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_default-oym",
            "name_prefix": "",
            "owner_id": "548850886359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_default-oym"
            },
            "tags_all": {
              "Name": "SG_default-oym"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd3e67299fe2ebeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:subnet/subnet-08cc030c8af4c746a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.142.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cc030c8af4c746a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "548850886359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN_pri_a-10_142_3_0"
            },
            "tags_all": {
              "Name": "SN_pri_a-10_142_3_0"
            },
            "vpc_id": "vpc-0dd3e67299fe2ebeb"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN_pri_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:subnet/subnet-0e9c5be006382f517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.142.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9c5be006382f517",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "548850886359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN_pri_b-10_142_4_0"
            },
            "tags_all": {
              "Name": "SN_pri_b-10_142_4_0"
            },
            "vpc_id": "vpc-0dd3e67299fe2ebeb"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SN_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:subnet/subnet-0644c8fdde1d416d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.142.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0644c8fdde1d416d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "548850886359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN_pub_a-10_142_6_0"
            },
            "tags_all": {
              "Name": "SN_pub_a-10_142_6_0"
            },
            "vpc_id": "vpc-0dd3e67299fe2ebeb"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850886359:vpc/vpc-0dd3e67299fe2ebeb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.142.0.0/16",
            "default_network_acl_id": "acl-0c6267dd3b6d601e7",
            "default_route_table_id": "rtb-029c5f7b98680f018",
            "default_security_group_id": "sg-0b73fb1be97652624",
            "dhcp_options_id": "dopt-0111614379ca6d814",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd3e67299fe2ebeb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029c5f7b98680f018",
            "owner_id": "548850886359",
            "tags": {
              "Name": "VPC_test"
            },
            "tags_all": {
              "Name": "VPC_test"
            }
          }
        }
      ]
    }
  ]
}